force-app/main/default/objects/TTC_Records__c/TTC_Records__c.object-meta.xml
<CustomObject>
    <label>TTC Records</label>
    <nameField>
        <displayFormat>TTC-{0000}</displayFormat>
        <label>TTC Collaboration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TTC Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>