force-app/main/default/objects/TTC_Records__c/fields/Collaboration_Type__c.field-meta.xml
<CustomField>
    <fullName>Collaboration_Type__c</fullName>
    <label>Collaboration Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Restart installation</fullName>
            </value>
            <value>
                <fullName>Version Update</fullName>
            </value>
            <value>
                <fullName>Security Update</fullName>
            </value>
            <value>
                <fullName>Unlock Account</fullName>
            </value>
            <value>
                <fullName>Technical Issues</fullName>
            </value>
            <value>
                <fullName>Installation Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>