force-app/main/default/objects/TTC_Records__c/fields/MTC_Action__c.field-meta.xml
<CustomField>
    <fullName>MTC_Action__c</fullName>
    <label>MTC Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>