force-app/main/default/objects/TTC_Records__c/fields/MTC_Comment__c.field-meta.xml
<CustomField>
    <fullName>MTC_Comment__c</fullName>
    <label>MTC Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>