force-app/main/default/objects/TTC_Records__c/fields/Technical_Information_Needed__c.field-meta.xml
<CustomField>
    <fullName>Technical_Information_Needed__c</fullName>
    <label>Technical Information Needed</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>