force-app/main/default/objects/TTC_Records__c/fields/Use_Cases_to_Address__c.field-meta.xml
<CustomField>
    <fullName>Use_Cases_to_Address__c</fullName>
    <label>Use Cases to Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>