force-app/main/default/objects/TTC_Records__c/validationRules/Lead_ve_Opportunity_Zorunlu.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_ve_Opportunity_Zorunlu</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Lead__c ) &amp;&amp;  ISBLANK( Opportunity__c )</errorConditionFormula>
    <errorMessage>TTC Record her zaman bir Lead veya Opportunity ile 
ilişkilendilmelidir.</errorMessage>
</ValidationRule>