force-app/main/default/objects/TTC_Records__c/validationRules/Respond_by_date.validationRule-meta.xml
<ValidationRule>
    <fullName>Respond_by_date</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Respond_by_Date__c &lt; (TODAY() + 5), ISNEW())</errorConditionFormula>
    <errorMessage>Respond by date, yanıtlama tarihi ileri bir tarihte olmalı ve 
bugünden itibaren en az 5 gün sonrasında bir tarihe 
atanmalıdır</errorMessage>
</ValidationRule>